fix contrast ratio

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -70,7 +70,7 @@ input[type='search']::-webkit-search-results-decoration {
   --hero-background-rgb: 0, 0, 0;
   --icon-primary: #000;
   --icon-secondary: #525252;
-  --interactive: #0f9bfe;
+  --interactive: #0090f5;
   --interactive-alt: #0353a6;
   --logo-durham-primary: #002337;
   --logo-durham-secondary: #702567;
